# ESP32-water-meter

./: Cargo.toml  Makefile  README.md  TIMER_NOTES.md  WORK_STATUS.md  flash-retry.sh  sdkconfig.defaults
.cargo/: config.toml
docs/: HARDWARE_SETUP.md  mqtt-control.md  wifi-on-demand-sketch.md
src/: lib.rs  main.rs  mqtt.rs  network_config.rs  wifi.rs
src/cli/: commands.rs  meter_commands.rs  meter_parser.rs  mod.rs  parser.rs  terminal.rs
src/meter/: config.rs  handler.rs  mod.rs
src/mtu/: config.rs  error.rs  gpio_mtu.rs  gpio_mtu_timer.rs  gpio_mtu_timer_v2.rs  mod.rs
