[package]
name = "esp32-water-meter"
version = "0.1.0"
authors = ["Water Meter Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ESP32 water meter MTU interface with ESP-IDF"

[dependencies]
# ESP-IDF (std approach - mature for ESP32)
esp-idf-svc = { version = "0.49", default-features = false }
esp-idf-hal = "0.44"
esp-idf-sys = { version = "0.35" }

# Embedded HAL
embedded-hal = "0.2"
embedded-svc = "0.28"

# Utilities
log = "0.4"
anyhow = "1.0"

[build-dependencies]
embuild = "0.32"

[profile.dev]
# Rust debug is too slow - always build with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
